erDiagram
  registered_users {
    varchar user_id PK
    text name
    text email
    text password_hash
    varchar phone_number
    integer year_of_birth
    text secret_question
    text secret_answer
    timestamptz registered_at
    boolean is_active
  }

  metro_stations {
    varchar station_id PK
    text name
    boolean is_interchange_metro
    boolean is_interchange_national_rail
    varchar interchange_rail_station_id FK
  }

  metro_schedules {
    varchar schedule_id PK
    varchar line
    varchar direction
    time departure_time
    time arrival_time
    integer frequency_min
    decimal base_fare_usd
    decimal per_stop_fare_usd
  }

  metro_schedule_stops {
    varchar schedule_id PK
    varchar station_id PK
    integer stop_order
  }

  metro_travel_history {
    varchar trip_id PK
    varchar user_id FK
    varchar schedule_id FK
    varchar entry_station_id FK
    varchar exit_station_id FK
    varchar ticket_type
    date travel_date
    timestamptz tap_in_time
    timestamptz tap_out_time
    decimal amount_usd
    varchar status
  }

  national_rail_stations {
    varchar station_id PK
    text name
    varchar city
    boolean is_interchange_metro
    boolean is_interchange_national_rail
    text_array interchange_nr_lines
    varchar interchange_metro_station_id FK
  }

  national_rail_schedules {
    varchar schedule_id PK
    varchar line
    varchar service_type
    varchar direction
    time departure_time
    time arrival_time
    decimal base_fare_usd
    decimal per_stop_fare_usd
  }

  national_rail_schedule_stops {
    varchar schedule_id PK
    varchar station_id PK
    integer stop_order
  }

  national_rail_seat_layouts {
    varchar layout_id PK
    varchar schedule_id FK
  }

  national_rail_coaches {
    varchar layout_id PK
    varchar coach PK
    varchar fare_class
  }

  national_rail_seats {
    varchar seat_id PK
    varchar layout_id PK
    varchar coach PK
    integer seat_row
    char seat_column
  }

  ticket_types {
    varchar ticket_type PK
    varchar display_name
    text_array available_on
    text description
  }

  ticket_type_rules {
    varchar ticket_type PK
    varchar network PK
    varchar pricing_model
    text formula
    boolean seat_assignment
    boolean advance_purchase
    boolean changes_allowed
    boolean refundable
  }

  bookings {
    varchar booking_id PK
    varchar user_id FK
    varchar schedule_id FK
    varchar ticket_type FK
    varchar layout_id FK
    varchar coach FK
    varchar seat_id FK
    varchar fare_class
    decimal amount_usd
    timestamptz booking_date
    date travel_date
    varchar status
  }

  payments {
    varchar payment_id PK
    varchar user_id FK
    varchar booking_id FK
    varchar trip_id FK
    decimal amount_usd
    varchar payment_method
    timestamptz payment_date
    varchar payment_status
  }

  feedback {
    varchar feedback_id PK
    varchar user_id FK
    varchar booking_id FK
    integer rating
    text comments
    timestamptz feedback_date
  }

  refund_policy {
    varchar refund_policy_id PK
    varchar label
    varchar network
    varchar service_type
    varchar ticket_type FK
    varchar version
  }

  refund_policy_windows {
    varchar window_id PK
    varchar refund_policy_id FK
    varchar label
    integer hours_before_departure_min
    integer hours_before_departure_max
    decimal refund_percentage
    decimal admin_fee_usd
  }

  booking_rules {
    varchar booking_rules_id PK
    varchar version
    varchar network
    timestamptz last_updated
    varchar rule_category
    varchar rule_title
    text rule_details
    jsonb extra_details
  }

  travel_policies {
    varchar travel_policy_id PK
    varchar version
    date last_updated
    varchar network
    varchar policy_category
    varchar policy_title
    text policy_details
    jsonb extra_details
  }

  registered_users ||--o{ metro_travel_history : "makes"
  registered_users ||--o{ bookings : "makes"
  registered_users ||--o{ payments : "pays"
  registered_users ||--o{ feedback : "writes"

  metro_schedules ||--o{ metro_schedule_stops : "has stops"
  metro_stations ||--o{ metro_schedule_stops : "appears in"
  metro_schedules ||--o{ metro_travel_history : "used in"
  metro_stations ||--o{ metro_travel_history : "entry/exit"

  metro_stations }o--o| national_rail_stations : "interchange"

  national_rail_schedules ||--o{ national_rail_schedule_stops : "has stops"
  national_rail_stations ||--o{ national_rail_schedule_stops : "appears in"
  national_rail_schedules ||--|| national_rail_seat_layouts : "has layout"
  national_rail_seat_layouts ||--o{ national_rail_coaches : "has coaches"
  national_rail_coaches ||--o{ national_rail_seats : "has seats"

  national_rail_schedules ||--o{ bookings : "booked on"
  national_rail_seats ||--o{ bookings : "reserved in"
  ticket_types ||--o{ bookings : "type of"
  ticket_types ||--o{ ticket_type_rules : "has rules"
  ticket_types ||--o{ refund_policy : "applies to"

  bookings ||--o{ payments : "paid by"
  bookings ||--o{ feedback : "reviewed in"
  metro_travel_history ||--o{ payments : "paid by"

  refund_policy ||--o{ refund_policy_windows : "has windows"
